<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="nyc.c4q.dogdata.LoginActivity">

  <EditText
    android:id="@+id/edit_username"
    android:layout_width="235dp"
    android:layout_height="42dp"
    android:layout_marginTop="120dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:hint="@string/hint_username"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.503"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <EditText
    android:id="@+id/edit_pass"
    android:layout_width="235dp"
    android:layout_height="42dp"
    android:layout_marginTop="36dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:hint="@string/hint_password"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_username"/>
  <Button
    android:id="@+id/launch_button"
    android:layout_width="112dp"
    android:layout_height="60dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="140dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:text="@string/button_submit"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_pass"/>

</android.support.constraint.ConstraintLayout>
