<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="nyc.c4q.dogdata.BreedActivity">

  <TextView
    android:id="@+id/welcome_tv"
    android:layout_width="290dp"
    android:layout_height="74dp"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <android.support.v7.widget.CardView
    android:id="@+id/dog1_cv"
    android:layout_width="394dp"
    android:layout_height="89dp"
    android:layout_marginTop="32dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:elevation="5dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/welcome_tv">
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:elevation="10dp">
      <TextView
        android:id="@+id/textView"
        android:layout_width="241dp"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/dog1_cv_text"
        android:textAlignment="center"
        android:textSize="24sp"
        />
      <ImageView
        android:id="@+id/dog1_iv"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/default_dog1_image"
        android:scaleType="fitStart"
        />
    </RelativeLayout>
  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
    android:id="@+id/dog2_cv"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_view_height"
    android:layout_marginTop="24dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:elevation="5dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/dog1_cv">
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <TextView
        android:id="@+id/textView2"
        android:layout_width="241dp"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/dog2_cv_text"
        android:textAlignment="center"
        android:textSize="24sp"
        />
      <ImageView
        android:id="@+id/dog2_iv"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/default_dog1_image"
        android:layout_alignParentEnd="true"
        />
    </RelativeLayout>
  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
    android:id="@+id/dog3_cv"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_view_height"
    android:layout_marginTop="24dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/dog2_cv">
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <TextView
        android:id="@+id/textView3"
        android:layout_width="241dp"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/dog3_cv_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
      <ImageView
        android:id="@+id/dog3_iv"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/default_dog1_image"
        android:layout_alignParentEnd="true"
        />
    </RelativeLayout>
  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
    android:id="@+id/dog4_cv"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_view_height"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/dog3_cv"
    app:layout_constraintVertical_bias="0.025">
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <TextView
        android:id="@+id/textView4"
        android:layout_width="241dp"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/dog4_cv_text"
        android:textAlignment="center"
        android:textSize="24sp"/>
      <ImageView
        android:id="@+id/dog4_iv"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/default_dog1_image"
        android:layout_alignParentEnd="true"
        />
    </RelativeLayout>
  </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>
